@startuml
left to right direction
package "taskt.Core.Automation.Commands"{
class "CalculateDateTimeFromTextCommand" <<sealed>> {
+RunCommand() : void 
+v_DateTime : String <<get>> <<set>> 
}
}

package "taskt.Core.Automation.Commands"{
abstract class "ACalculateDateTimeCommands"{
#CommandProcess() : void 
+v_CalculationMethod : String <<get>> <<set>> 
+v_Value : String <<get>> <<set>> 
+v_Result : String <<get>> <<set>> 
}
}

package "taskt.Core.Automation.Commands"{
abstract class "ADateTimeConvertCommands"{
+v_DateTime : String <<get>> <<set>> 
+v_Result : String <<get>> <<set>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "IDateTimeResultProperties" {
+{abstract} v_Result : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
abstract class "ScriptCommand"{
+RunCommand() : void 
+RunCommand() : void 
+GetDisplayValue() : String
+Render() : List
+Render() : List
+AfterShown() : void 
+Refresh() : void 
+BeforeValidate() : void 
+IsValidate() : Boolean
+ConvertToIntermediate() : void 
+ConvertToIntermediate() : void 
+ConvertToRaw() : void 
+ConvertToRaw() : void 
+Clone() : ScriptCommand
+CheckMatched() : Boolean
+Replace() : Boolean
+AddInstance() : void 
+RemoveInstance() : void 
+CommandID : String <<get>> <<set>> 
+CommandName : String <<get>> <<set>> 
+IsCommented : Boolean <<get>> <<set>> 
+SelectionName : String <<get>> <<set>> 
+DefaultPause : Int32 <<get>> <<set>> 
+LineNumber : Int32 <<get>> <<set>> 
+PauseBeforeExeucution : Boolean <<get>> <<set>> 
+DisplayForeColor : Color <<get>> <<set>> 
+v_Comment : String <<get>> <<set>> 
+CommandEnabled : Boolean <<get>> <<set>> 
+IsValid : Boolean <<get>> <<protected set>>
+IsWarning : Boolean <<get>> <<protected set>>
+validationResult : String <<get>> <<protected set>>
+IsMatched : Boolean <<get>> <<protected set>>
+IsDontSavedCommand : Boolean <<get>> <<set>> 
+IsNewInsertedCommand : Boolean <<get>> <<set>> 
+CustomRendering : Boolean <<get>> <<set>> 
+ControlsList : Dictionary <<get>> 
+RenderedControls : List<System.Windows.Forms.Control>
#_ControlsList : Dictionary<string, System.Windows.Forms.Control>
}
}

package "taskt.Core.Automation.Commands"{
Interface "IDateTimeConvertProperties" {
+{abstract} v_DateTime : String <<get>> <<set>> <<abstract>> 
+{abstract} v_Result : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "ICanHandleDateTime" {
}
}

package "taskt.Core.Automation.Commands"{
Interface "IUIParameterProperties" {
+{abstract} ControlsList : Dictionary <<get>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "ICommandIDProperties" {
+{abstract} CommandID : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "IExpandableProperties" {
}
}

taskt.Core.Automation.Commands.CalculateDateTimeFromTextCommand --|> taskt.Core.Automation.Commands.ACalculateDateTimeCommands
taskt.Core.Automation.Commands.ACalculateDateTimeCommands --|> taskt.Core.Automation.Commands.ADateTimeConvertCommands
taskt.Core.Automation.Commands.ACalculateDateTimeCommands ..|> taskt.Core.Automation.Commands.IDateTimeResultProperties
taskt.Core.Automation.Commands.ADateTimeConvertCommands --|> taskt.Core.Automation.Commands.ScriptCommand
taskt.Core.Automation.Commands.ADateTimeConvertCommands ..|> taskt.Core.Automation.Commands.IDateTimeConvertProperties
taskt.Core.Automation.Commands.IDateTimeResultProperties --|> taskt.Core.Automation.Commands.ICanHandleDateTime
taskt.Core.Automation.Commands.ScriptCommand ..|> taskt.Core.Automation.Commands.IUIParameterProperties
taskt.Core.Automation.Commands.ScriptCommand ..|> taskt.Core.Automation.Commands.ICommandIDProperties
taskt.Core.Automation.Commands.IDateTimeConvertProperties --|> taskt.Core.Automation.Commands.ICanHandleDateTime
taskt.Core.Automation.Commands.ICanHandleDateTime --|> taskt.Core.Automation.Commands.IExpandableProperties
@enduml